0.230 2023-10-22
  [Changes]
    * Operate non-blocking getaddrinfo using Net::DNS::Native.
    
  [Requirement Changes]
    * Require SPVM::Net::DNS::Native 0.001.

0.229 2023-10-19
  [Requirement Changes]
    * Require SPVM::Go 0.008.
  [Test Improvement]
    * Add tests for IO::Socekt::IP#accept method.
    * Add tests for accept timeout and read timeout for IO::Socket::IP.
    
0.228 2023-10-18
  [Requirement Changes]
    * Require SPVM::Sys 0.528.
  [Bug Fix]
    * Fix a bug checking Errno->EINTR instead of Sys::Socket::Errno->EINTR.
      
0.227 2023-10-17
  [Bug Fix]
    * Fix a bug that IO::Socket#connect method do not retry connect operation when a retry is needed.
  
  [Document Improvement]
    * Fix and improve docs for IO::Socket#connect method.
    * Fix and improve docs for IO::Socket#accept method.
    * Fix and improve docs for IO::Socket#recvfrom method.
    * Fix and improve docs for IO::Socket#sendto method.
    
0.226 2023-10-16
  [New Features]
    * Add V6Only option to IO::Socket::IP#init method.
  
  [Imcompatible Changes]
    * AutoFlush field is moved from IO::Handle to IO::File.
    * set_autoflush method is moved from IO::Handle to IO::File.
    * autoflush method is moved from IO::Handle to IO::File.
    * Default values of options for IO::Socket#init method are changed.
      
      Domain = 0
      
      Proto = 0
      
      Type = 0
      
      Listen = 0
    * The type of IO::Socket::IP#ReuseAddr becomes byte.
    * The type of IO::Socket::IP#ReusePort becomes byte.
    * The type of IO::Socket::IP#Broadcast becomes byte.
    
  [Document Improvement]
    * Improve docs for IO::Socket.
    * Add IO::open link to docs for IO::Dir class.
    * Add IO::opendir link to docs for IO::File class.
  [Document Fix]
    * Fix a doc that IO::Socket#close returned int type instead of void type.
    
0.225 2023-10-15
  [Requirement Changes]
    * Require SPVM 0.990021
  [Incompatibe Changes]