@@ -24,6 +24,8 @@ C<method sockname : L<Sys::Socket::Sockaddr|SPVM::Sys::Socket::Sockaddr> ();>
 
 Returns L<Sys::Socket::Sockaddr|SPVM::Sys::Socket::Sockaddr> object containing a local address and a local port.
 
+The type of the returned value is L<Sys::Socket::Sockaddr::In6|SPVM::Sys::Socket::Sockaddr::In6>.
+
 This method must be implemented by the class that declares this interface.
 
 =head2 peername
@@ -31,6 +33,8 @@ This method must be implemented by the class that declares this interface.
 C<method peername : L<Sys::Socket::Sockaddr|SPVM::Sys::Socket::Sockaddr> ();>
 
 Returns a L<Sys::Socket::Sockaddr|SPVM::Sys::Socket::Sockaddr> object containing a remote address and a local port.
+
+The type of the returned value is L<Sys::Socket::Sockaddr::In6|SPVM::Sys::Socket::Sockaddr::In6>.
 
 This method must be implemented by the class that declares this interface.
 
@@ -75,6 +79,20 @@ Returns a remote host name.
 C<method peerport : int ();>
 
 Returns a remote port.
+
+=head2 create_sockaddr
+
+C<method create_sockaddr : L<Sys::Socket::Sockaddr|SPVM::Sys::Socket::Sockaddr> ($address : string, $port : int);>
+
+Creates a L<Sys::Socket::Sockaddr|SPVM::Sys::Socket::Sockaddr> object given the address $address and the port $port.
+
+$address is allowed to be a domain name, a host name, an IP address.
+
+The type of the returned value is L<Sys::Socket::Sockaddr::In6|SPVM::Sys::Socket::Sockaddr::In6>.
+
+Implementation:
+
+This method resolves $address using L<Net::DNS::Native#getaddrinfo|SPVM::Net::DNS::Native/"getaddrinfo"> method in non-blocking way and creates a L<Sys::Socket::Sockaddr::In6|SPVM::Sys::Socket::Sockaddr::In6> object from the resolved IP address and $port.
 
 =head1 Copyright & License
 
